Fix double borders in grid

--- a/style.css
+++ b/style.css
@@ -11,16 +11,13 @@ body {
 }
 
 .sketchpad {
-    background-color: white;
-    height: 80vh;
-    width: 80vw;
+    background-color: black;
+    min-height: 80vh;
+    min-width: 85vw;
     display: grid;
+    gap: 1px;
 }
 
 .sketchpad div {
-    border: black .2rem solid;
-}
-
-.sketch-square {
-
+    background-color: white;
 }
